--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,7 +34,6 @@
 }
 
 .background-img {
-    /*background-image: url("");*/
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -42,9 +41,8 @@
 /*-----------------------*/
 /* Navigation Admin */
 /*-----------------------*/
-body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > p{
+body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
     display: none;
-    padding-left: 25px;
 }
 
 
@@ -63,7 +61,7 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > p{
 }
 
 .search {
-    width: 55rem;
+    width: 40rem;
 }
 
 #category .dropdown-item:hover {
@@ -79,6 +77,57 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > p{
     height: 55px;
 }
 
-#remember-me #auth-remember-check .form-check-input:checked {
-    background-color: #007D3B;
+.login-background{
+    background-image: url("../images/background/Login.jpeg");
+}
+
+/*-----------------------*/
+/* Home Page */
+/*-----------------------*/
+
+.home-page-background{
+    background-image: url("../images/background/home-page-background.png");
+}
+
+.carousel-inner{
+    height: 300px;
+    display: flex;
+    align-items: center;
+}
+
+#carousel .carousel-item img {
+    width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+.discount-text p{
+    font-size: 24px;
+    font-weight: bold;
+    color: #666666;
+    margin: 0;
+}
+.discount-text p span{
+    font-size: 1em;
+    color: #F47433;
+}
+
+.dual-color-hr {
+    border: none;
+    height: 3px;
+    background-color: #EDEDED;
+    position: relative;
+    margin-top: 10px;
+    opacity: 75%;
+}
+
+.dual-color-hr::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40%;
+    height: 100%;
+    background-color: #E94430;
+    border-radius: 5px;
 }
