--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -611,7 +611,7 @@ body[data-layout=horizontal] .footer {
 
 @media (min-width: 769px) {
     body[data-sidebar-size=sm] {
-        min-height: 1450px
+        height: 100vh
     }
 }
 
