--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -42,6 +42,45 @@
     background-size: cover;
 }
 
+.subtitle-text p{
+    font-size: 24px;
+    font-weight: bold;
+    color: #666666;
+    margin: 0;
+}
+
+.subtitle-text p span{
+    font-size: 1em;
+}
+
+.dual-color-hr {
+    border: none;
+    height: 3px;
+    background-color: #EDEDED;
+    position: relative;
+    margin-top: 10px;
+    opacity: 75%;
+}
+
+.dual-color-hr::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40%;
+    height: 100%;
+    background-color: #E94430;
+    border-radius: 5px;
+}
+
+.fw-500{
+    font-weight: 500;
+}
+
+.fw-700{
+    font-weight: 700;
+}
+
 /*-----------------------*/
 /* Navigation Admin */
 /*-----------------------*/
@@ -105,37 +144,6 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
     object-fit: contain;
 }
 
-.subtitle-text p{
-    font-size: 24px;
-    font-weight: bold;
-    color: #666666;
-    margin: 0;
-}
-
-.subtitle-text p span{
-    font-size: 1em;
-}
-
-.dual-color-hr {
-    border: none;
-    height: 3px;
-    background-color: #EDEDED;
-    position: relative;
-    margin-top: 10px;
-    opacity: 75%;
-}
-
-.dual-color-hr::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 40%;
-    height: 100%;
-    background-color: #E94430;
-    border-radius: 5px;
-}
-
 .product-image {
     background-color: #F5F5F5;
     height: 150px;
@@ -149,19 +157,17 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
 
 .open-hours{
     font-size: 50px;
-    font-weight: 500;
 }
 
 .schedule p{
     font-size: 25px;
-    font-weight: 500;
 }
 
 .logo-footer{
-    width :20%;
+    width :15%;
 }
 .footer {
-    height: 150px;
+    height: 100px;
     background-color: #000000;
     color: white;
 }
@@ -186,9 +192,31 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
 
 .price{
     font-size: 30px;
-    font-weight: 700;
 }
 
 .recommendation{
     height: 200px;
 }
+
+/*-----------------------*/
+/* Profile */
+/*-----------------------*/
+
+.profile-background{
+    background-image: url("../images/background/profile-background.png");
+}
+
+.profile-icon{
+    width: 75.5%;
+}
+
+.profile-title p{
+    font-size: 32px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.profile-title p span {
+    font-size: 1em;
+}
+
