--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -164,10 +164,10 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
 }
 
 .logo-footer{
-    width :15%;
+    width :13%;
 }
 .footer {
-    height: 100px;
+    height: 70px;
     background-color: #000000;
     color: white;
 }
@@ -220,3 +220,6 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
     font-size: 1em;
 }
 
+.box-shadow{
+    box-shadow: 0px 0px 29px 3px rgba(0,0,0,0.1);
+}
