--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -40,6 +40,7 @@
 .background-img {
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100vh;
 }
 
 .subtitle-text p{
@@ -79,6 +80,10 @@
 
 .fw-700{
     font-weight: 700;
+}
+
+.content{
+    min-height: calc(100vh - 49px - 83px - 84px);
 }
 
 /*-----------------------*/
@@ -222,4 +227,12 @@ body[data-sidebar-size=sm] .navbar-brand-box .logo #logo > h5{
 
 .box-shadow{
     box-shadow: 0px 0px 29px 3px rgba(0,0,0,0.1);
+}
+
+/*-----------------------*/
+/* Cart */
+/*-----------------------*/
+
+.cart-background {
+    background-image: url("../images/background/cart-background.png");
 }
